--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "http-server": "^0.12.3",
     "node-sass": "^5.0.0",
     "nodemailer": "^6.5.0",
     "react": "^17.0.1",
