--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "react-reveal": "^1.2.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.2",
+    "react-vanilla-tilt": "^1.0.0",
+    "vanilla-tilt": "^1.7.1",
     "web-vitals": "^1.1.0"
   },
   "scripts": {
